# PulseHub

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  README_ZH.md  THIRD_PARTY_NOTICES.md  THIRD_PARTY_NOTICES_ZH.md  rust-toolchain.toml
apps/pulsehub-agent/: Cargo.toml
apps/pulsehub-agent/src/: foreground.rs  local_log.rs  main.rs  watcher.rs
apps/pulsehub-config/: Cargo.toml
apps/pulsehub-config/src/: main.rs
apps/pulsehub-config/ui/: app-window.slint  i18n.slint  models.slint  theme.slint
apps/pulsehub-config/ui/components/: device-card.slint  status-banner.slint
apps/pulsehub-config/ui/pages/: overview-page.slint  profile-page.slint  settings-page.slint
crates/pulsehub-config-store/: Cargo.toml
crates/pulsehub-config-store/src/: lib.rs
crates/pulsehub-core/: Cargo.toml
crates/pulsehub-core/src/: lib.rs
crates/pulsehub-device/: Cargo.toml
crates/pulsehub-device/src/: discovery.rs  hidpp.rs  lib.rs
crates/pulsehub-device/tests/fixtures/: g102-c092-release-5200.txt
crates/pulsehub-ipc/: Cargo.toml
crates/pulsehub-ipc/src/: lib.rs  windows.rs
crates/pulsehub-profile/: Cargo.toml
crates/pulsehub-profile/src/: lib.rs
crates/pulsehub-ui/: Cargo.toml  build.rs
crates/pulsehub-ui/src/: lib.rs
crates/pulsehub-windows-session/: Cargo.toml
crates/pulsehub-windows-session/src/: lib.rs
docs/: DEPENDENCY_LICENSE_AUDIT.md  DEPENDENCY_LICENSE_AUDIT_ZH.md  DESIGN.md  IMPLEMENTATION.md  NEXT_STEPS.md
docs/implementation/: 01-overview-and-architecture.md  02-workspace-and-modules.md  03-agent-and-profile-switching.md  04-g102-hid.md  05-configuration-and-ipc.md  06-gui-windows-and-observability.md  07-build-test-and-roadmap.md
installer/: LICENSE-AGREEMENT.txt  PulseHub.iss  README.md  README_ZH.md  RELEASE_NOTES_0.1.1.md  RELEASE_NOTES_0.1.2.md  RELEASE_NOTES_0.1.3.md  RELEASE_NOTES_0.1.4.md  THIRD_PARTY_NOTICES.txt  build-installer.ps1
tools/pulsehub-probe/: Cargo.toml
tools/pulsehub-probe/src/: main.rs
