[package]
name = "pulsehub-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
pulsehub-core = { path = "../../crates/pulsehub-core" }
pulsehub-ipc = { path = "../../crates/pulsehub-ipc" }
serde_json = "1.0.150"

[lints]
workspace = true
