[package]
name = "pulsehub-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
pulsehub-config-store = { path = "../../crates/pulsehub-config-store" }
pulsehub-core = { path = "../../crates/pulsehub-core" }
pulsehub-ipc = { path = "../../crates/pulsehub-ipc" }
pulsehub-ui = { path = "../../crates/pulsehub-ui" }
serde_json = "1.0.150"
slint = "1.17.1"

[lints]
workspace = true
