[package]
name = "pulsehub-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
default-run = "pulsehub-config"

[dependencies]
pulsehub-config-store = { path = "../../crates/pulsehub-config-store" }
pulsehub-core = { path = "../../crates/pulsehub-core" }
pulsehub-ipc = { path = "../../crates/pulsehub-ipc" }
pulsehub-ui = { path = "../../crates/pulsehub-ui" }
rfd = "0.17.2"
serde_json = "1.0.150"
single-instance = "0.3.3"
slint = "1.17.1"

[lints]
workspace = true
