[package]
name = "pulsehub-ipc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
pulsehub-core = { path = "../pulsehub-core" }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.150"

[target.'cfg(windows)'.dependencies]
interprocess = "2.4.2"
pulsehub-windows-session = { path = "../pulsehub-windows-session" }
widestring = "1.2.1"

[lints]
workspace = true
