[package]
name = "pulsehub-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
build = "build.rs"

[dependencies]
slint = "1.17.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_System_ProcessStatus", "Win32_System_Threading"] }

[build-dependencies]
slint-build = "1.17.1"
