[package]
name = "pulsehub-windows-session"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Memory",
    "Win32_System_Threading",
] }

[lints.rust]
unsafe_code = "allow"
